Add list order pagination logic
